# fde-bench-hackathon

./: README.md
.devcontainer/: README.md
docs/: architecture.md  evals.md  methodology.md
docs/challenge/: README.md
docs/challenge/task1/: README.md  customer_brief.md  engineering_review.md  routing_guide.md
docs/challenge/task2/: README.md  customer_brief.md  engineering_review.md  field_guide.md
docs/challenge/task3/: README.md  customer_brief.md  engineering_review.md  execution_guide.md
docs/eval/: fdebench.md  load-testing.md
docs/submission/: README.md
implemention-docs/: INTERVIEW-PREP.md  architecture-design.md  azure-decisions.md  deployed-latest-run-evals.md  implementation-spec.md  local-first-run-evals.md  local-run-using-gpt-5.4-mini.md  solution-plan.md  submission-methodology.md
infra/: README.md
py/: .dockerignore  Dockerfile  Makefile  debug_orchestrate.py
py/apps/eval/: mock_tool_service.py  run_eval.py
py/apps/sample/: config.py  extract_service.py  llm_client.py  main.py  models.py  orchestrate_service.py  pyproject.toml  triage_service.py
py/common/libs/fastapi/tests/: test_exception_handler.py
py/common/libs/fdebenchkit/src/ms/common/fdebenchkit/: __init__.py  caller.py  models.py  probes.py  registry.py  runner.py  weights.py
py/data/: README.md
py/data/task1/: public_eval_50.json  public_eval_50_gold.json
py/data/task2/: public_eval_50_gold.json
py/data/task3/: .gitignore  public_eval_50.json  public_eval_50_gold.json  public_eval_50_mock_responses.json
(+5 files in other folders)
