[project]
name = "sample"
version = "0.0.0"
description = "FDEBench solution: triage, extract, orchestrate"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.0.0",
    "email-validator>=2.0.0",
    "openai>=1.60.0",
    "httpx>=0.28.1",
    "tenacity>=9.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pyright]
pythonVersion = "3.12"
